--- a/website/index.html
+++ b/website/index.html
@@ -29,11 +29,11 @@
       <a href="post-survey.html"> Post-Study Survey </a>
     </nav>
     <h1> Welcome to the Robotics Study </h1>
-    <p> Thank you for parttcipating! Please read the following instructions carefully before begining.</p>
+    <p> Thank you for participating! Please read the following instructions carefully before begining.</p>
     <ul>
-      <li> Complete the pre-study survey before starting the study. </li>
-      <li> During each study session use the Study Interaction page to record your data, press the "Start Study" button when begining study session and "Stop Study" when finished with your study session. Each time you get up to stretch press the "Stretched" button.</li>
-      <li> Complete the post-stduy survey after completing the study. </li>
+      <li> Complete the Pre-Study Survey before starting the study. </li>
+      <li> During each study session, use the Study Interaction page to record your data. Press the "Start Study" button when begining a study session and "Stop Study" when finished with your study session. Each time you get up to stretch, press the "Stretched" button.</li>
+      <li> Complete the Post-Study Survey after completing all 5 days of the study. </li>
     </ul>
   </body>
 </html>
