--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,13 @@
       nav a:hover{
         text-decoration: underline; 
       }
+      ol, ul {
+        line-height: 1.6; 
+      }
+      li {
+        margin-bottom: 0.75em;
+      }
+
     </style>
   </head>
   <body>
@@ -28,12 +35,23 @@
       <a href="mid-survey.html"> Mid-Study Survey </a>
       <a href="post-survey.html"> Post-Study Survey </a>
     </nav>
-    <h1> Welcome to the Robotics Study </h1>
-    <p> Thank you for participating! Please read the following instructions carefully before begining.</p>
-    <ul>
-      <li> Complete the Pre-Study Survey before starting the study. </li>
-      <li> During each study session, use the Study Interaction page to record your data. Press the "Start Study" button when begining a study session and "Stop Study" when finished with your study session. Each time you get up to stretch, press the "Stretched" button.</li>
-      <li> Complete the Post-Study Survey after completing all 5 days of the study. </li>
-    </ul>
+    <h1> Welcome to the Sphero Robotics Study! </h1>
+    <p> Thank you for participating! Please read the following instructions carefully before begining:</p>
+    <ol>
+      <li > Complete the <strong> <em> Pre-Study Survey </em> </strong> before starting the study. </li>
+      <br>
+      <li> During each study session, use the Study Interaction page to record your data. 
+        <ul>
+        <li>
+        Click the <strong> "Start Study" </strong> button when begining your study session.
+        <br>
+        <li> Click <strong> "Stop Study" </strong> when finished with your study session. 
+        <li>Each time you get up to stretch, click the <strong> "Stretched" </strong> button.
+        </ul>
+      </li>
+      <br>
+      <li> Complete the <strong> <em> Mid-Study Survey </em> </strong> after you have completed five days with your Sphero. </li>
+      <li> Complete the <strong> <em> Post-Study Survey </em> </strong> after completing all ten days with your Sphero. </li>
+    </ol>
   </body>
 </html>
