--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
       <a href="post-survey.html"> Post-Study Survey </a>
     </nav>
     <h1> Welcome to the Sphero Robotics Study! </h1>
-    <p> Thank you for participating! Please read the following instructions carefully before begining:</p>
+    <p> Thank you for participating! Please read the following instructions carefully before begining: </p>
     <ol>
       <li > Complete the <strong> <em> Pre-Study Survey </em> </strong> before starting the study. </li>
       <br>
@@ -50,9 +50,11 @@
         </ul>
       </li>
       <br>
-      <li> Complete the <strong> <em> Mid-Study Survey </em> </strong> after you have completed five days with your Sphero. </li>
+      <li> Complete the <strong> <em> Mid-Study Survey </em> </strong> after you have completed <u>five</u> days with your Sphero. </li>
       <br>
-      <li> Complete the <strong> <em> Post-Study Survey </em> </strong> after completing all ten days with your Sphero. </li>
+      <li> Complete the <strong> <em> Post-Study Survey </em> </strong> after completing all <u>ten</u> days with your Sphero. </li>
     </ol>
+    <br><br><br><br>
+    If you have any questions related to your Sphero, study surveys, recording your stretches, or other, please contact a member of the study team: _____
   </body>
 </html>
