--- a/website/index.html
+++ b/website/index.html
@@ -55,6 +55,5 @@
       <li> Complete the <strong> <em> Post-Study Survey </em> </strong> after completing all <u>ten</u> days with your Sphero. </li>
     </ol>
     <br><br><br><br>
-    If you have any questions related to your Sphero, study surveys, recording your stretches, or other, please contact a member of the study team: _____
-  </body>
+    If you have any questions related to your Sphero, study surveys, recording your stretches, or any other study-related questions, please contact a member of the study team: _____  </body>
 </html>
