--- a/website/post-survey.html
+++ b/website/post-survey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <tite> Robotics Study Instructions </tite>
+    <tite> Post-Study </tite>
     <style>
       nav {
         background-color: #003366;
