--- a/website/pre-survey.html
+++ b/website/pre-survey.html
@@ -28,7 +28,7 @@
       <a href="post-survey.html"> Post-Study Survey </a>
     </nav>
     <h2> Pre-Study Survey </h2>
-    <a href="url">Will input link to survey when ready</a>
+    <a href="https://tufts.qualtrics.com/jfe/form/SV_aYkaOJe1qV2OnfE">Click Here To Take The Survey</a>
     <form id="preForm">
        <!-- Repeat for number of questions 
       1-5 answers
